<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="24dp"
        tools:targetApi="jelly_bean" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:src="@drawable/logo_home"
        android:tint="@color/colorAccent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edt_UserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="#11000000"
            android:drawableLeft="@drawable/ic_person_black_24dp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_person_black_24dp"
            android:ems="10"
            android:hint="@string/user_name"
            android:inputType="textPersonName"
            android:paddingLeft="5dp"
            android:paddingStart="5dp"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textColorHint="@color/white"
            android:textSize="22dp" />

        <EditText
            android:id="@+id/edt_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="#11000000"
            android:drawableLeft="@drawable/ic_lock_black_24dp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_lock_black_24dp"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/pass_word"
            android:inputType="textPassword"
            android:paddingLeft="5dp"
            android:paddingStart="5dp"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textColorHint="@color/white"
            android:textSize="22dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="0dp"
                android:buttonTint="@color/white"
                android:checked="true"
                android:gravity="center"
                android:text="@string/remember"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="0dp"
                android:drawableLeft="@drawable/ic_lock_open_black_24dp"
                android:drawablePadding="6dp"
                android:drawableStart="@drawable/ic_lock_open_black_24dp"
                android:gravity="center_vertical"
                android:padding="4dp"
                android:text="@string/forgot_password"
                android:textColor="@color/white" />

        </RelativeLayout>

        <Button
            android:id="@+id/btn_Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="0dp"
            android:fontFamily="sans-serif"
            android:padding="15dp"
            android:shadowColor="@android:color/transparent"
            android:text="@string/login"
            android:textColor="@color/colorAccent"
            android:textSize="22dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="right"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:text="@string/language_string"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/tv_Choose_Language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/language_english"
                android:textColor="@color/colorAccent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="@drawable/ic_down_language"
                android:backgroundTint="@color/colorAccent" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="bottom">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:text="@string/intro"
                android:textColor="@color/white" />
        </RelativeLayout>


    </LinearLayout>
</LinearLayout>